# serializer version: 1
# name: test_table_to_2d[case0]
  list([
    list([
      'A',
      'B',
      'C',
      'D',
    ]),
    list([
      'A',
      'B',
      'E',
      'E',
    ]),
  ])
# ---
# name: test_table_to_2d[case1]
  list([
    list([
      'A',
      'B',
      None,
      None,
    ]),
    list([
      'C',
      'D',
      None,
      None,
    ]),
    list([
      'C',
      'D',
      'E',
      'F',
    ]),
    list([
      'G',
      'H',
      None,
      None,
    ]),
  ])
# ---
# name: test_table_to_2d[case2]
  list([
    list([
      'A',
      'B',
      None,
    ]),
    list([
      'C',
      'D',
      None,
    ]),
    list([
      'C',
      'E',
      'F',
    ]),
    list([
      'G',
      'H',
      None,
    ]),
  ])
# ---
# name: test_table_to_2d[case3]
  list([
    list([
      '1',
      '2',
      '5',
    ]),
    list([
      '3',
      '4',
      '4',
    ]),
    list([
      '3',
      '6',
      '7',
    ]),
  ])
# ---
